--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "css-loader": "^0.28.10",
     "json-loader": "^0.5.7",
     "node-sass": "^4.7.2",
+    "react-dom": "^16.2.0",
+    "react-router-dom": "^4.2.2",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.3",
@@ -27,6 +29,7 @@
     "babel-preset-react": "^6.24.1",
     "httpster": "^1.0.3",
     "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react-redux": "^5.0.7",
+    "redux": "^3.7.2"
   }
 }
